Make draft loader for DB, and update player tableg

--- a/load_schedule.ipynb
+++ b/load_schedule.ipynb
@@ -28,6 +28,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "# pickle.load(, 'r')\n",
+    "with open(r'./data/rl/basketball-reference.com.p', \"rb\") as input_file:\n",
+    "    e = pickle.load(input_file)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e.limit = 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 437,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving RequestLimiter status to disk...\n"
+     ]
+    }
+   ],
+   "source": [
+    "e._save()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 229,
    "metadata": {},
    "outputs": [],
@@ -439,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +525,7 @@
      "output_type": "stream",
      "text": [
       "Successfully loaded previous Rate Limiter info for https://www.espn.com\n",
-      "Initialized with 3 of 20 entries filled\n",
+      "Initialized with 0 of 20 entries filled\n",
       "\n",
       "Saving RequestLimiter status to disk...\n"
      ]
@@ -500,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
