Loading 2021 data after making some changes to accomodate weird formats in 2022

--- a/load_schedule.ipynb
+++ b/load_schedule.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,49 @@
    ],
    "source": [
     "e._save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 452,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00:00:00\n",
+      "11:59:00\n",
+      "12:00:00\n",
+      "12:59:00\n",
+      "13:00:00\n",
+      "22:00:00\n",
+      "23:00:00\n",
+      "23:59:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def process_time(tim : str) -> str:\n",
+    "    tim_list = tim.split(':')\n",
+    "    \n",
+    "    tim_list[1] = tim_list[1][:-1]\n",
+    "    if 'p' in tim and tim_list[0] != '12':\n",
+    "        tim_list[0] = int(tim_list[0]) + 12\n",
+    "    if 'a' in tim and tim_list[0] == '12':\n",
+    "        tim_list[0] = '00'\n",
+    "    tim_list.append('00')\n",
+    "    tim_str = ':'.join([str(i) for i in tim_list])\n",
+    "    return tim_str\n",
+    "\n",
+    "print (process_time('12:00a'))\n",
+    "print (process_time('11:59a'))\n",
+    "print (process_time('12:00p'))\n",
+    "print (process_time('12:59p'))\n",
+    "print (process_time('1:00p'))\n",
+    "print (process_time('10:00p'))\n",
+    "print (process_time('11:00p'))\n",
+    "print (process_time('11:59p'))"
    ]
   },
   {
