Ready injury load functions for write and save out one month at a time

--- a/rds/pdf_to_csv_test.ipynb
+++ b/rds/pdf_to_csv_test.ipynb
@@ -146,6 +146,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert_into('https://ak-static.cms.nba.com/referee/injury/Injury-Report_2022-10-15_11AM.pdf', 'test.csv', pages = 'all')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 181,
    "metadata": {},
    "outputs": [
@@ -167,7 +176,7 @@
     "\n",
     "    response = urllib.request.urlopen(link)\n",
     "    a = response.read()\n",
-    "    convert_into(link, 'test.csv', pages = 'all')\n",
+    "    convert_into(link, 'test.csv', pages = 'all')a\n",
     "\n",
     "    with open('test.csv') as f:\n",
     "        csv_rows = []\n",
@@ -817,7 +826,7 @@
     }
    ],
    "source": [
-    "read_pdf(a.read())"
+    "read_pdf(a.read())\n"
    ]
   },
   {
