Add code to load starting lineups

--- a/rds/pdf_to_csv_test.ipynb
+++ b/rds/pdf_to_csv_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "link = 'https://ak-static.cms.nba.com/referee/injury/Injury-Report_2023-01-18_03PM.pdf'"
+    "link = 'https://ak-static.cms.nba.com/referee/injury/Injury-Report_2019-01-31_08PM.pdf'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('https://ak-static.cms.nba.com/referee/injury/Injury-Report_2023-01-17_07PM.pdf', datetime.time(19, 30))\n"
+      "('https://ak-static.cms.nba.com/referee/injury/Injury-Report_2023-01-19_03PM.pdf', datetime.time(15, 30))\n"
      ]
     }
    ],
@@ -146,11 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got stderr: Jan 20, 2023 11:52:12 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'Helvetica-Bold' for 'Calibri-Bold'\n",
+      "Jan 20, 2023 11:52:12 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'Helvetica' for 'Calibri'\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "convert_into('https://ak-static.cms.nba.com/referee/injury/Injury-Report_2022-10-15_11AM.pdf', 'test.csv', pages = 'all')"
+    "convert_into(link, 'test.csv', pages = 'all')"
    ]
   },
   {
@@ -853,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Mar 26 2022, 15:45:34) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
